@@ -7,13 +7,13 @@ noinst_LTLIBRARIES = libgnomeui-deprecated.la
 
 libgnomeui_deprecated_la_CFLAGS = \
 	$(GLIB_CFLAGS)			\
-	$(GTK2_CFLAGS)			\
+	$(GTK_CFLAGS)			\
 	$(GCONF_CFLAGS)			\
 	$(WARN_CFLAGS)
 
 libgnomeui_deprecated_la_LIBADD = \
 	$(GLIB_LIBS)			\
-	$(GTK2_LIBS)			\
+	$(GTK_LIBS)			\
 	$(GCONF_LIBS)
 
 libgnomeui_deprecated_la_SOURCES = \
